added some task in lpi101.1 and license

--- a/Lpi/Labs/101/lab101.1
+++ b/Lpi/Labs/101/lab101.1
@@ -1,1 +1,12 @@
-Determine and configure hardware settings
+*Determine and configure hardware settings
+
+
+##task a head
+
+1. 
+	A. list all possible hard drives on the system.
+	B. list all possible hardware that is bus centric view.
+	C. provide a list of all possible usb devices in tree view.
+	D. list the ranges of available memory with their online status in json format.
+	E. display information about online CPUs only architecture.
+	F. list information about block devices with output info about filesystems.
