adding some devops labs topics

--- a/DevOps/Ops/0_Labs/702/lab702.2
+++ b/DevOps/Ops/0_Labs/702/lab702.2
@@ -1,1 +1,5 @@
-Container Deployment and Orchestration  
+#Container Deployment and Orchestration  
+
+
+*Setting Up an Environment with Docker Compose
+*Kubernetes
