--- a/DevOps/Ops/0_Labs/703/lab703.1
+++ b/DevOps/Ops/0_Labs/703/lab703.1
@@ -1,1 +1,4 @@
-Virtual Machine Deployment
+#Virtual Machine Deployment
+
+* Installing Vagrant on CentOS
+* Using Vagrant and Docker to Build a Dev Environment 
