--- a/DevOps/Ops/0_Labs/703/lab703.2
+++ b/DevOps/Ops/0_Labs/703/lab703.2
@@ -1,1 +1,9 @@
-Cloud Deployment 
+#Cloud Deployment 
+
+*    ansible.cfg
+*    ansible-playbook
+*    ansible-vault
+*    ansible-galaxy
+*    ansible-doc
+
+** Exchange SSH Keys and Run Ansible Playbooks
