--- a/DevOps/Ops/0_Labs/704/lab704.1
+++ b/DevOps/Ops/0_Labs/704/lab704.1
@@ -1,1 +1,9 @@
-Ansible 
+#Ansible 
+
+*    ansible.cfg
+*    ansible-playbook
+*    ansible-vault
+*    ansible-galaxy
+*    ansible-doc
+
+** Exchange SSH Keys and Run Ansible Playbooks
