--- a/DevOps/Ops/0_Labs/704/lab704.2
+++ b/DevOps/Ops/0_Labs/704/lab704.2
@@ -1,1 +1,10 @@
-Other Configuration Management Tools 
+#Other Configuration Management Tools 
+
+*    Manifest, Class, Recipe, Cookbook
+*    puppet
+*    chef
+*    chef-solo
+*    chef-client
+*    chef-server-ctl
+*    knife
+
