--- a/DevOps/Ops/0_Labs/705/lab705.1
+++ b/DevOps/Ops/0_Labs/705/lab705.1
@@ -1,1 +1,11 @@
-IT Operations and Monitoring 
+#IT Operations and Monitoring 
+
+
+
+
+*    Prometheus, Node exporter, Pushgateway, Altermanager, Grafana
+*    Service exploits, brute force attacks, and denial of service attacks
+*    Security updates, packet filtering and application gateways
+*    Virtualization hosts, DNS and load balancers
+
+
